fixed few thing + netlify | v0.2.4

--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta name="version" content="{repoData.version}" />
+  <meta name="version" content="0.2.3" />
   <meta charset="UTF-8" />
-  <meta name="description" content="{pageDesc}" />
+  <meta name="description" content="FIKO is small modern css framework" />
   <meta name="viewport" content="width=device-width" />
-
-  <link id="stylesheet" rel="stylesheet" href="css/fiko.css" />
-
-  <title>FIKO</title>
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="apple-mobile-web-app-title" content="FIKO CSS" />
   <meta name="application-name" content="FIKO CSS" />
-  <link rel='canonical' href=https://f.rokma.rocks />
+
+  <title>FIKO CSS</title>
+  <link id="stylesheet" rel="stylesheet" href="css/fiko.css" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel='canonical' href=https://fiko.rokma.rocks />
 
   <body>
     <header>
       <h1>FIKO</h1>
+      <p>
+        fiko.css is a small css framework with dark and light mode. It also
+        gives you classless and fluid variations. A starter to keep your
+        developer life sane and simple.
+      </p>
       <hr />
       <nav>
         <ul>
-          <li>nav | pick a style ></li>
+          <li>NAV | PICK A STYLE ></li>
         </ul>
         <ul>
           <li>
-            <button onclick="changeStylesheet('css/fiko.css')">fiko</button>
+            <button onclick="changeStylesheet('css/fiko.css')">FIKO</button>
           </li>
           <li>
             <button onclick="changeStylesheet('css/fiko.classless.css')">
-              classless
+              CLASSLESS
             </button>
           </li>
           <li>
             <button onclick="changeStylesheet('css/fiko.fluid.classless.css')">
-              fluid
+              FLUID
             </button>
           </li>
         </ul>
