--- a/test/pico/index.html
+++ b/test/pico/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Basic template • Pico.css</title>
+    <title>FIKO | pico</title>
     <meta
       name="description"
       content="A basic custom template for Pico using only CSS custom properties (variables). Built with Pico CSS."
     />
 
-    <link rel="canonical" href="https://picocss.com/examples/basic-template/" />
+    <link rel="canonical" href="https://fiko.rokma.rocks/test/pico/" />
 
     <link
       rel="stylesheet"
