--- a/test/switch/index.html
+++ b/test/switch/index.html
@@ -7,9 +7,9 @@
   <meta name="apple-mobile-web-app-title" content="FIKO CSS" />
   <meta name="application-name" content="FIKO CSS" />
 
-  <title>FIKO CSS</title>
+  <title>FIKO | Switch</title>
   <link id="stylesheet" rel="stylesheet" href="../../css/fiko.css" />
-  <link rel='canonical' href=https://fiko.rokma.rocks />
+  <link rel='canonical' href=https://fiko.rokma.rocks/switch/ />
 
   <body>
     <header>
