--- a/test/index.html
+++ b/test/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Basic template • fico.css</title>
+    <title>FIKO | fiko.css</title>
     <meta
       name="description"
-      content="A basic custom template for Fiko using only CSS custom properties (variables). Built with Fiko CSS."
+      content="A very FIKO css template using only `var(--magic)`"
     />
 
     <link rel="stylesheet" href="../css/fiko.css" />
-
-    <!-- <link rel="stylesheet" href="css/custom.css" /> -->
   </head>
   <body>
     <header class="container">
@@ -40,14 +38,8 @@
             <details role="list">
               <summary aria-haspopup="listbox">Examples (v1)</summary>
               <ul role="listbox">
-                <li><a href="../v1-preview/">Preview</a></li>
-                <li><a href="../v1-preview-rtl/">Right-to-left</a></li>
-                <li><a href="../v1-classless/">Classless</a></li>
-                <li><a href="../v1-basic-template/">Basic template</a></li>
-                <li><a href="../v1-company/">Company</a></li>
-                <li><a href="../v1-google-amp/">Google Amp</a></li>
-                <li><a href="../v1-sign-in/">Sign in</a></li>
-                <li><a href="../v1-bootstrap-grid/">Bootstrap grid</a></li>
+                <li><a href="/">Classless</a></li>
+                <li><a href="/">Basic template</a></li>
               </ul>
             </details>
           </li>
