--- a/test/pico/index.html
+++ b/test/pico/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>FIKO | pico</title>
+    <title>FIKO | pico v1</title>
     <meta
       name="description"
       content="A basic custom template for Pico using only CSS custom properties (variables). Built with Pico CSS."
@@ -21,11 +21,8 @@
   <body>
     <header class="container">
       <hgroup>
-        <h1>Basic template</h1>
-        <h2>
-          A basic custom template for Pico using only CSS custom properties
-          (variables).
-        </h2>
+        <h1>Pico.css v1.5.10 | 230422</h1>
+        <h2>A Basic Template for Pico using only CSS var(--magic)</h2>
       </hgroup>
       <nav>
         <ul>
@@ -45,14 +42,14 @@
             <details role="list">
               <summary aria-haspopup="listbox">Examples (v1)</summary>
               <ul role="listbox">
-                <li><a href="../v1-preview/">Preview</a></li>
-                <li><a href="../v1-preview-rtl/">Right-to-left</a></li>
-                <li><a href="../v1-classless/">Classless</a></li>
-                <li><a href="../v1-basic-template/">Basic template</a></li>
-                <li><a href="../v1-company/">Company</a></li>
-                <li><a href="../v1-google-amp/">Google Amp</a></li>
-                <li><a href="../v1-sign-in/">Sign in</a></li>
-                <li><a href="../v1-bootstrap-grid/">Bootstrap grid</a></li>
+                <li><a href="#">Preview</a></li>
+                <li><a href="#">Right-to-left</a></li>
+                <li><a href="#">Classless</a></li>
+                <li><a href="#">Basic template</a></li>
+                <li><a href="#">Company</a></li>
+                <li><a href="#">Google Amp</a></li>
+                <li><a href="#">Sign in</a></li>
+                <li><a href="#">Bootstrap grid</a></li>
               </ul>
             </details>
           </li>
