--- a/test/index.html
+++ b/test/index.html
@@ -6,9 +6,9 @@
     <title>FIKO | fiko.css</title>
     <meta
       name="description"
-      content="A very FIKO css template using only `var(--magic)`"
+      content="CSS TEMPLATE, VERY FIKO! [Stay Sane! Low Code Verbosity, just a b it of css classes spiced up with `var(--magic)`]"
     />
-
+    <link rel='canonical' href=https://fiko.rokma.rocks/ />
     <link rel="stylesheet" href="../css/fiko.css" />
   </head>
   <body>
@@ -38,8 +38,8 @@
             <details role="list">
               <summary aria-haspopup="listbox">Examples (v1)</summary>
               <ul role="listbox">
-                <li><a href="/">Classless</a></li>
-                <li><a href="/">Basic template</a></li>
+                <li><a href="/switch/">fiko.css</a></li>
+                <li><a href="/pico/">pico.css</a></li>
               </ul>
             </details>
           </li>
