--- a/package/index.html
+++ b/package/index.html
@@ -3,17 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stilo.css" />
-    <title>2024 Classless CSS Framework Demo</title>
+    <link rel="stylesheet" href="fiko.css" />
+    <title>FIKO | 2024 Classless CSS Framework Demo</title>
   </head>
   <body class="toggle-wrapper">
-    <!-- JS Toggle Button for Dark/Light Mode -->
-    <!-- <button onclick="toggleTheme()">Toggle Dark/Light Mode</button> -->
-
-    <!-- PURECSS Toggle Button for Dark/Light Mode -->
-    <!-- <input type="checkbox" id="theme-toggle" class="toggle-container" />
-    <label for="theme-toggle">Toggle Dark/Light Mode</label> -->
-
     <!-- JS Toggle Button for Dark/Light Mode -->
     <input
       type="checkbox"
@@ -25,12 +18,17 @@
 
     <!-- Header -->
     <header class="container">
-      <h1>Classless CSS Framework</h1>
+      <h1>h1 | Classless CSS Framework</h1>
+      <h2>h2 | Classless CSS Framework</h2>
+      <h3>h3 | Classless CSS Framework</h3>
+      <h4>Classless CSS Framework</h4>
+      <h5>Classless CSS Framework</h5>
+      <h6>Classless CSS Framework</h6>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -53,7 +51,10 @@
         <!-- Card -->
         <div class="card">
           <h2>Card Title</h2>
-          <img src="image.jpg" alt="Image description" />
+          <img
+            src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+            alt="rokma.com"
+          />
           <p>Card content goes here. Lorem ipsum dolor sit amet.</p>
           <a href="#" class="card-button">Call to Action</a>
         </div>
