Responsive padding setup | v0.5.3

--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="fiko.css" />
-    <title>FIKO | 2024 Classless CSS Framework Demo</title>
+    <title>FIKO TEST v0.5.3</title>
   </head>
   <body class="toggle-wrapper">
     <!-- JS Toggle Button for Dark/Light Mode -->
@@ -33,9 +33,23 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main>
+      <div class="container">
+        <h2>Full-bleed layouts</h2>
+        <p>
+          Full-bleed layouts, as the following image while this title is
+          contained using class `.container` to its div.
+        </p>
+      </div>
+
+      <!-- Full-bleed -->
+      <img
+        src="https://d33wubrfki0l68.cloudfront.net/d3772863f4bb03cd953a43a1df164465f9e39622/add3d/assets/images/about/01.jpg"
+        alt="rokma.com"
+      />
+
       <!-- Section -->
-      <section>
+      <section class="container">
         <h1>Welcome to Classless CSS Framework</h1>
         <p>
           This is a paragraph. Lorem ipsum dolor sit, amet consectetur
